logs/Slang/generated/keywords/5.6.2--keyword_tri.sv.log
name: keyword_tri
description: The 'tri' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_tri.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_tri.sv:8:8: error: expected declarator
    bit tri;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_tri.sv:8:12: error: expected declarator
    bit tri;
           ^
